<?xml version="1.0"?>
<package format="2">
  <name>chomp_generator</name>
  <version>0.0.0</version>
  <description>The chomp_generator package</description>

  <maintainer email="jbohren@todo.todo">jbohren</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>chomp_motion_planner</depend>
  <depend>cmake_modules</depend>

</package>
